fix background flicker

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -12,7 +12,7 @@ body, html {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .home {
